Implementation of reserves and calculation adjustments.